--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,16 @@
 server.port=80
 
-google.auth.credential.file-path=credentials.json
+
+google.api-uris.spreadsheets=https://sheets.googleapis.com/v4/spreadsheets
+
 google.docs.spreadsheet-id=1nNORw4xQgzB_qbHA6OXmJKuFy_rSfZifJ5bWw_EvvIg
+google.auth.credential-file-path=credentials.json
+google.auth.scopes[0]=https://www.googleapis.com/auth/spreadsheets
+google.auth.scopes[1]=https://www.googleapis.com/auth/drive
+google.auth.scopes[2]=https://www.googleapis.com/auth/drive.file
+
+server.servlet.contextPath=/api
+
+
+app.student.persistence.range.from=A
+app.student.persistence.range.to=C
