--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,6 @@
-server.port=80
-
-
-google.api-uris.spreadsheets=https://sheets.googleapis.com/v4/spreadsheets
-
-google.docs.spreadsheet-id=1nNORw4xQgzB_qbHA6OXmJKuFy_rSfZifJ5bWw_EvvIg
-google.auth.credential-file-path=credentials.json
-google.auth.scopes[0]=https://www.googleapis.com/auth/spreadsheets
-google.auth.scopes[1]=https://www.googleapis.com/auth/drive
-google.auth.scopes[2]=https://www.googleapis.com/auth/drive.file
-
+server.port=8080
 server.servlet.contextPath=/api
+server.error.include-message=always
 
 
-app.student.persistence.range.from=A
-app.student.persistence.range.to=C
+student.service.url=http://localhost:8081/api/students
